// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuCard > matches snapshot(s) with extended className 1`] = `
<div>
  <div
    class="container grid p-2 py-8 gap-2 self-start mock-className"
  >
    <div>
      Foo
    </div>
  </div>
</div>
`;

exports[`MenuCard > matches snapshot(s) with no extended className 1`] = `
<div>
  <div
    class="container grid p-2 py-8 gap-2 self-start "
  >
    <div>
      Foo
    </div>
  </div>
</div>
`;
